function/event listener testing

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,9 @@
     </a>
   </nav>
   <div class="container">
+    <form action="/api/notes" method="post">
+      <input type="submit" value="input"/>
+    </form>
     <div style="margin-top: 80px;" class="jumbotron text-center">
       <h1 class="display-4">Note Taker <span role="img" aria-label="Memo">📝</span></h1>
       <h4 class="mt-4">Take notes with Express</h4>
